--- a/test/NETCore.IntegrationTesting.WebAPI.IntegrationTests/NETCore.IntegrationTesting.WebAPI.IntegrationTests.csproj
+++ b/test/NETCore.IntegrationTesting.WebAPI.IntegrationTests/NETCore.IntegrationTesting.WebAPI.IntegrationTests.csproj
@@ -25,4 +25,9 @@
     <ProjectReference Include="..\..\src\NETCore.IntegrationTesting.WebAPI\NETCore.IntegrationTesting.WebAPI.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controller\" />
+    <Folder Include="Model\" />
+  </ItemGroup>
+
 </Project>
