--- a/src/NETCore.IntegrationTesting.WebAPI/NETCore.IntegrationTesting.WebAPI.csproj
+++ b/src/NETCore.IntegrationTesting.WebAPI/NETCore.IntegrationTesting.WebAPI.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NETCore.IntegrationTesting.MockCloudSdk\NETCore.IntegrationTesting.MockCloudSdk.csproj" />
+  </ItemGroup>
+
 </Project>
